--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,32 @@
-buildscript {
-	ext {
-		springBootVersion = '1.5.4.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+	id 'org.springframework.boot' version '2.3.1.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-
+group = 'com.example.rabbitMq.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 11
+sourceCompatibility = '1.8'
 
 repositories {
-	mavenLocal()
 	mavenCentral()
 }
 
-ext {
-	springCloudVersion = 'Dalston.SR2'
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
+	testImplementation 'junit:junit:4.12'
+	implementation 'junit:junit:4.12'
 }
 
-dependencies {
-	compile('org.springframework.boot:spring-boot-starter-amqp')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+test {
+	useJUnitPlatform()
 }
 
 bootRun{
 //	jvmArgs = ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5006"]
-	systemProperties = System.properties
+	systemProperties = System.properties as Map<String, ?>
 }
